add about page of atriya hotel

--- a/hotel/pages/about-us.html
+++ b/hotel/pages/about-us.html
@@ -5,8 +5,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>درباره ما</title>
+    <link rel="stylesheet" href="../styles/common-nav-bar.css">
+    <link rel="stylesheet" href="../styles/about-us.css">
 </head>
-<body>
+<body dir="rtl">
+    <main>
+        <nav>
+            <ul>
+                <li><a class="white-font-color" href="home.html">خانه</a></li>
+                <li><a class="white-font-color" href="about-us.html">درباره ما</a></li>
+                <li><a class="white-font-color" href="contact-us.html">تماس با ما</a></li>
+            </ul>
+        </nav>
+        <section class="nav-top">
+            <div class="nav-top-text">
+                <h2>درباره هتل آتریا</h2>
+            <p>گروه هتل‌های آتریا ساخت اولین هتل خود را در سال ۱۳۸۰ در آستارای استان گیلان به پایان بردند. همان زمان مسوولان این گروه اعلام کردند که دومین هتل از سری هتل‌های آتریا در تهران ساخته خواهد شد. ۲۷ بهمن ۱۳۸۵ کلنگ ساخت هتل آتریا خلیج فارس در بلوار کشاورز تهران زده شد و ۲۷ ماه بعد در اسفند ۱۳۸۸ افتتاح شد.</p>
+            <p>گروه هتل‌های آتریا ساخت اولین هتل خود را در سال ۱۳۸۰ در آستارای استان گیلان به پایان بردند.</p>
+        </div>
+            <div class="nav-top-image">
+                <img src="../images/about.jpeg" alt="this is hotel image">
+            </div>
+        </section>
+
+        <section class="comment-section">
+            <div class="first-comment comment">
+                <img  src="../images/person1.PNG" alt="this comment recieved from lana">
+                <p style="text-align: justify">
+                    گروه هتل‌های آتریا ساخت اولین هتل خود را در سال ۱۳۸۰ در آستارای استان گیلان به پایان بردند. همان زمان مسوولان این گروه اعلام کردند که دومین هتل از سری هتل‌های آتریا در تهران ساخته خواهد شد. ۲۷ بهمن ۱۳۸۵ کلنگ ساخت هتل آتریا خلیج فارس در بلوار کشاورز تهران زده شد و ۲۷ ماه بعد در اسفند ۱۳۸۸ افتتاح شد.
+
+                </p>
+            </div>
+            <div class="second-comment comment">
+                <img  src="../images/person2.PNG" alt="this comment recieved from json">
+                <p style="text-align: justify">
+                    گروه هتل‌های آتریا ساخت اولین هتل خود را در سال ۱۳۸۰ در آستارای استان گیلان به پایان بردند. همان زمان مسوولان این گروه اعلام کردند که دومین هتل از سری هتل‌های آتریا در تهران ساخته خواهد شد. ۲۷ بهمن ۱۳۸۵ کلنگ ساخت هتل آتریا خلیج فارس در بلوار کشاورز تهران زده شد و ۲۷ ماه بعد در اسفند ۱۳۸۸ افتتاح شد.
+
+                </p>
+            </div>
+        </section>
+
+        <footer>
+            تمامی حقوق مادی و معنوی این سایت محفوظ است.
+        </footer>
+
     
+    </main>
 </body>
 </html>
