--- a/hotel/pages/home.html
+++ b/hotel/pages/home.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>خانه</title>
+    <link rel="stylesheet" href="../styles/common-nav-bar.css">
     <link rel="stylesheet" href="../styles/home.css">
 </head>
 <body dir="rtl">
