consider position sticky on nav bar

--- a/hotel/pages/about-us.html
+++ b/hotel/pages/about-us.html
@@ -29,14 +29,14 @@
         </section>
 
         <section class="comment-section">
-            <div class="first-comment comment">
+            <div class="comment">
                 <img  src="../images/person1.PNG" alt="this comment recieved from lana">
                 <p style="text-align: justify">
                     گروه هتل‌های آتریا ساخت اولین هتل خود را در سال ۱۳۸۰ در آستارای استان گیلان به پایان بردند. همان زمان مسوولان این گروه اعلام کردند که دومین هتل از سری هتل‌های آتریا در تهران ساخته خواهد شد. ۲۷ بهمن ۱۳۸۵ کلنگ ساخت هتل آتریا خلیج فارس در بلوار کشاورز تهران زده شد و ۲۷ ماه بعد در اسفند ۱۳۸۸ افتتاح شد.
 
                 </p>
             </div>
-            <div class="second-comment comment">
+            <div class="comment">
                 <img  src="../images/person2.PNG" alt="this comment recieved from json">
                 <p style="text-align: justify">
                     گروه هتل‌های آتریا ساخت اولین هتل خود را در سال ۱۳۸۰ در آستارای استان گیلان به پایان بردند. همان زمان مسوولان این گروه اعلام کردند که دومین هتل از سری هتل‌های آتریا در تهران ساخته خواهد شد. ۲۷ بهمن ۱۳۸۵ کلنگ ساخت هتل آتریا خلیج فارس در بلوار کشاورز تهران زده شد و ۲۷ ماه بعد در اسفند ۱۳۸۸ افتتاح شد.
