--- a/hotel/pages/home.html
+++ b/hotel/pages/home.html
@@ -10,11 +10,13 @@
 </head>
 <body dir="rtl">
 
-    <ul>
-        <li><a class="white-font-color" href="#">خانه</a></li>
-        <li><a class="white-font-color" href="about-us.html">درباره ما</a></li>
-        <li><a class="white-font-color" href="contact-us.html">تماس با ما</a></li>
-    </ul>
+    <nav>
+        <ul>
+            <li><a class="white-font-color" href="#">خانه</a></li>
+            <li><a class="white-font-color" href="about-us.html">درباره ما</a></li>
+            <li><a class="white-font-color" href="contact-us.html">تماس با ما</a></li>
+        </ul>
+    </nav>
 
     <div class="slide-show">
 
