--- a/hotel/pages/contact-us.html
+++ b/hotel/pages/contact-us.html
@@ -5,8 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>تماس با ما</title>
+    <link rel="stylesheet" href="../styles/common-nav-bar.css">
+    <link rel="stylesheet" href="../styles/contact-us.css">
 </head>
-<body>
+<body dir="rtl">
+
+    <main>
+        <nav>
+            <ul>
+                <li><a class="white-font-color" href="home.html">خانه</a></li>
+                <li><a class="white-font-color" href="about-us.html">درباره ما</a></li>
+                <li><a class="white-font-color" href="contact-us.html">تماس با ما</a></li>
+            </ul>
+        </nav>
+    </main>
     
 </body>
 </html>
