consider fontawesome for use different font and using pre builting icon for elements

--- a/hotel/pages/about-us.html
+++ b/hotel/pages/about-us.html
@@ -13,7 +13,7 @@
         <nav>
             <ul>
                 <li><a class="white-font-color" href="home.html">خانه</a></li>
-                <li><a class="white-font-color" href="about-us.html">درباره ما</a></li>
+                <li><a class="white-font-color" href="#">درباره ما</a></li>
                 <li><a class="white-font-color" href="contact-us.html">تماس با ما</a></li>
             </ul>
         </nav>
