change position to flex in galleries section

--- a/hw4/pages/profile.html
+++ b/hw4/pages/profile.html
@@ -34,9 +34,14 @@
         </div>
 
         <div class="card">
-            <img src="../images/Rectangle 2.png" alt="" >
-            <img src="../images/Rectangle 2.1.png" alt="">
-            <img src="../images/Rectangle 2.2.png" alt="">
+            <div class="item-1">
+                <img  src="../images/Rectangle 2.png" alt="" >
+                <img  src="../images/Rectangle 2.2.png" alt="">
+            </div>
+            <div class="item-2">
+                <img src="../images/Rectangle 2.1.png" alt="">
+            </div>
+
         </div>
 
         <div class="bottom-icon">
