add scss with bem convention for responsive portfolio website

--- a/hw5/pages/index.html
+++ b/hw5/pages/index.html
@@ -9,8 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="../styles/style.css" />
-    <link rel="stylesheet" href="../styles/animations.css" />
+    <link rel="stylesheet" href="../styles/main.css" />
     <link rel="stylesheet" href="../styles/mobile-design.css" />
     <link rel="stylesheet" href="../styles/tablet-design.css" />
     <script src="../scripts/weather.js" defer></script>
@@ -30,7 +29,7 @@
           ></a>
         </div>
         <h4><strong>PORTFOLIO</strong></h4>
-        <p class="text-grey">Template by W3.CSS</p>
+        <p class="sidebar__content__paragraph">Template by W3.CSS</p>
       </div>
 
       <nav class="sidebar__nav">
@@ -49,7 +48,7 @@
 
           <li class="sidebar__nav__list__item">
             <a
-              class="sidebar__nav__list__item__link sidebar__nav__list__item__link--lage"
+              class="sidebar__nav__list__item__link sidebar__nav__list__item__link--large"
               href="#about"
               class="about-icon"
             >
@@ -73,24 +72,24 @@
         </ul>
       </nav>
 
-      <div class="social">
-        <div class="social__item">
-          <i class="fa fa-facebook-official social__item__icon"></i>
+      <div class="sidebar__social">
+        <div class="sidebar__social__item">
+          <i class="fa fa-facebook-official sidebar__social__item__icon"></i>
         </div>
-        <div class="social__item">
-          <i class="fa fa-instagram social__item__icon"></i>
+        <div class="sidebar__social__item">
+          <i class="fa fa-instagram sidebar__social__item__icon"></i>
         </div>
-        <div class="social__item">
-          <i class="fa fa-snapchat social__item__icon"></i>
+        <div class="sidebar__social__item">
+          <i class="fa fa-snapchat sidebar__social__item__icon"></i>
         </div>
-        <div class="social__item">
-          <i class="fa fa-pinterest social__item__icon"></i>
+        <div class="sidebar__social__item">
+          <i class="fa fa-pinterest sidebar__social__item__icon"></i>
         </div>
-        <div class="social__item">
-          <i class="fa fa-twitter social__item__icon"></i>
+        <div class="sidebar__social__item">
+          <i class="fa fa-twitter sidebar__social__item__icon"></i>
         </div>
-        <div class="social__item">
-          <i class="fa fa-linkedin social__item__icon"></i>
+        <div class="sidebar__social__item">
+          <i class="fa fa-linkedin sidebar__social__item__icon"></i>
         </div>
       </div>
     </aside>
@@ -123,18 +122,18 @@
           >
             ALL
           </button>
-          <button class="filter-design main__header__filter__item">
+          <button class="main__header__filter__item">
             <i class="fa fa-diamond main__header__filter__item__icon"></i>
             Design
           </button>
           <button
-            class="filter-photo main__header__filter__item main__header__filter__item--unvisible"
+            class="main__header__filter__item main__header__filter__item--unvisible"
           >
             <i class="fa fa-image main__header__filter__item__icon"></i>
             Photos
           </button>
           <button
-            class="filter-art main__header__filter__item main__header__filter__item--unvisible"
+            class="main__header__filter__item main__header__filter__item--unvisible"
           >
             <i class="fa fa-map-pin main__header__filter__item__icon"></i>
             Art
@@ -241,42 +240,42 @@
       <section class="main__pagination">
         <div>
           <a
-            class="main__pagination_item main__pagination_item--non-default"
+            class="main__pagination__item main__pagination__item--non-default"
             href=""
             ><<</a
           >
         </div>
         <div>
           <a
-            class="main__pagination_item main__pagination_item--default"
+            class="main__pagination__item main__pagination__item--default"
             href=""
             >1</a
           >
         </div>
         <div>
           <a
-            class="main__pagination_item main__pagination_item--non-default"
+            class="main__pagination__item main__pagination__item--non-default"
             href=""
             >2</a
           >
         </div>
         <div>
           <a
-            class="main__pagination_item main__pagination_item--non-default"
+            class="main__pagination__item main__pagination__item--non-default"
             href=""
             >3</a
           >
         </div>
         <div>
           <a
-            class="main__pagination_item main__pagination_item--non-default"
+            class="main__pagination__item main__pagination__item--non-default"
             href=""
             >4</a
           >
         </div>
         <div>
           <a
-            class="main__pagination_item main__pagination_item--non-default"
+            class="main__pagination__item main__pagination__item--non-default"
             href=""
             >>></a
           >
