--- a/react/make-form-class-component/pages/index.html
+++ b/react/make-form-class-component/pages/index.html
@@ -9,7 +9,7 @@
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js" defer></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" defer></script>
     <script crossorigin src="https://unpkg.com/@babel/standalone/babel.min.js" defer></script>
-    <script src="../scripts/script.js" type="text/babel"></script>
+    <script src="../scripts/script.js" type="text/babel" defer></script>
 </head>
 <body>
     
